bugfix - nav menu on mobile devies

--- a/src/sass/elements/game/_navigation.scss
+++ b/src/sass/elements/game/_navigation.scss
@@ -12,15 +12,22 @@
         height: calc(100% - 70px);
     }
     @include tablet {
+        position: fixed;
         height: 100%;
+        min-height: 100%;
+        max-height: 100%;
     }
 
     @include mobileL {
         width: 100%;
         height: calc(100% - 52px);
+        min-height: calc(100% - 52px);
+        max-height: calc(100% - 52px);
     }
     @include mobileM {
         height: calc(100% - 43px);
+        min-height: calc(100% - 43px);
+        max-height: calc(100% - 43px);
     }
     &::-webkit-scrollbar {
         width: 0;
