--- a/src/sass/elements/signInForm/_signInForm.scss
+++ b/src/sass/elements/signInForm/_signInForm.scss
@@ -1,4 +1,18 @@
 .auth {
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background: url(../../images/summer_landscape.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    max-width: 100%;
+    max-height: 100vh;
+    min-width: 100%;
+    min-height: 100vh;
     &__title {
         font-size: 61px;
         color: $color-green;
